...

  @override
  Widget build(BuildContext context) {
    return Padding(
      padding: const EdgeInsets.only(top: 60),
      child: OutlinedButton(
        key:const Key('followFollowing_follow_following_button'),
        onPressed: () async {
          if (isFollowing) {
            final res = await showPopupMessage(
              context: context,
              title: Text(
                "Unfollow ${widget.profileData.displayName}",
...
                ),
              ),
              message: Text(
                "Their posts will no longer show up in your home timeline. You can still view thier profile, unless their posts are protected",
                style: TextStyle(color: Colors.white),
              ),
              confirmText: "Unfollow",
              cancelText: "Cancel",
            );
            if (res == null || res == false) return;
            final unfollow = ref.read(unFollowControllerProvider);
            unfollow(widget.profileData.username).then((res) {
              res.fold((l) {
...
