...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final user = ref.watch(currentUserProvider);
    final profileState = ref.watch(userProfileProvider);

    return GestureDetector(
      key:const Key('ProfileAvatar_HomeAppBar'),
      onTap: () => _openDrawer(),
      child: BuildSmallProfileImage(radius: 15, username: user?.username ?? ""),
    );
  }

  void _openDrawer() {
...
