...
      body: CustomScrollView(
        slivers: [
          SliverAppBar(
            leading: BackButton(onPressed: _navigateBack),
            titleSpacing: 0,
            title: TextFormField(
              key:const Key('profileSearch_profile_search_screen'),
              focusNode: _searchFocusNode,
              autofocus: true,
              controller: _searchController,
              cursorColor: Colors.blue,
              decoration: InputDecoration(
                contentPadding: const EdgeInsets.only(right: 20),
...
